// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Material Icons should render icon 1`] = `
<View
  shape="round"
  size={24}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderRadius": 32,
        "display": "flex",
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 24,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Material Icons should render with border, shape and size 1`] = `
<View
  background="white"
  border="black"
  shape="round"
  size={32}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#000000",
        "borderRadius": 40,
        "borderStyle": "solid",
        "borderWidth": 1,
        "display": "flex",
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 32,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Material Icons should render with round shape 1`] = `
<View
  shape="round"
  size={24}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderRadius": 32,
        "display": "flex",
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 24,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Material Icons should render with rounded square shape 1`] = `
<View
  shape="round-square"
  size={24}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderRadius": 8,
        "display": "flex",
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 24,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;
